--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -557,6 +557,9 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
+.m-10 {
+	margin: 2.5rem;
+}
 .mx-auto {
 	margin-left: auto;
 	margin-right: auto;
@@ -565,11 +568,26 @@ video {
 	margin-top: auto;
 	margin-bottom: auto;
 }
+.mt-4 {
+	margin-top: 1rem;
+}
 .flex {
 	display: flex;
 }
+.grid {
+	display: grid;
+}
 .h-full {
 	height: 100%;
+}
+.h-72 {
+	height: 18rem;
+}
+.h-40 {
+	height: 10rem;
+}
+.h-48 {
+	height: 12rem;
 }
 .max-h-screen {
 	max-height: 100vh;
@@ -580,11 +598,47 @@ video {
 .min-h-screen {
 	min-height: 100vh;
 }
+.w-72 {
+	width: 18rem;
+}
+.w-48 {
+	width: 12rem;
+}
+.grid-cols-2 {
+	grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-1 {
+	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.flex-col {
+	flex-direction: column;
+}
 .items-center {
 	align-items: center;
 }
+.items-start {
+	align-items: flex-start;
+}
+.justify-between {
+	justify-content: space-between;
+}
+.justify-center {
+	justify-content: center;
+}
 .justify-items-center {
 	justify-items: center;
+}
+.gap-4 {
+	gap: 1rem;
+}
+.gap-10 {
+	gap: 2.5rem;
+}
+.gap-8 {
+	gap: 2rem;
+}
+.gap-6 {
+	gap: 1.5rem;
 }
 .rounded-sm {
 	border-radius: 0.125rem;
@@ -594,6 +648,9 @@ video {
 }
 .rounded-lg {
 	border-radius: 0.5rem;
+}
+.rounded-3xl {
+	border-radius: 1.5rem;
 }
 .bg-yellow-400 {
 	--tw-bg-opacity: 1;
@@ -607,6 +664,22 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
+.bg-red-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
+}
+.bg-white {
+	--tw-bg-opacity: 1;
+	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
+}
+.bg-yellow-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
+}
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+}
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
 }
@@ -616,11 +689,33 @@ video {
 .bg-opacity-60 {
 	--tw-bg-opacity: 0.6;
 }
+.object-cover {
+	-o-object-fit: cover;
+	   object-fit: cover;
+}
 .p-7 {
 	padding: 1.75rem;
 }
 .p-4 {
 	padding: 1rem;
+}
+.p-6 {
+	padding: 1.5rem;
+}
+.p-10 {
+	padding: 2.5rem;
+}
+.p-5 {
+	padding: 1.25rem;
+}
+.p-3 {
+	padding: 0.75rem;
+}
+.p-1 {
+	padding: 0.25rem;
+}
+.p-8 {
+	padding: 2rem;
 }
 .px-10 {
 	padding-left: 2.5rem;
@@ -634,6 +729,30 @@ video {
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
 }
+.pl-2 {
+	padding-left: 0.5rem;
+}
+.pl-6 {
+	padding-left: 1.5rem;
+}
+.pr-4 {
+	padding-right: 1rem;
+}
+.pt-7 {
+	padding-top: 1.75rem;
+}
+.pb-7 {
+	padding-bottom: 1.75rem;
+}
+.pr-5 {
+	padding-right: 1.25rem;
+}
+.pl-4 {
+	padding-left: 1rem;
+}
+.pb-10 {
+	padding-bottom: 2.5rem;
+}
 .text-center {
 	text-align: center;
 }
@@ -645,11 +764,22 @@ video {
 	font-size: 1.125rem;
 	line-height: 1.75rem;
 }
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+.text-2xl {
+	font-size: 1.5rem;
+	line-height: 2rem;
+}
 .font-extrabold {
 	font-weight: 800;
 }
 .font-bold {
 	font-weight: 700;
+}
+.font-semibold {
+	font-weight: 600;
 }
 .uppercase {
 	text-transform: uppercase;
@@ -657,5 +787,15 @@ video {
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.shadow-sm {
+	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+@media (min-width: 768px) {
+
+	.md\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
 }
 
