--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -557,6 +557,9 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
+.col-span-6 {
+	grid-column: span 6 / span 6;
+}
 .m-10 {
 	margin: 2.5rem;
 }
@@ -571,11 +574,23 @@ video {
 .mt-4 {
 	margin-top: 1rem;
 }
+.mt-5 {
+	margin-top: 1.25rem;
+}
+.mt-1 {
+	margin-top: 0.25rem;
+}
 .flex {
 	display: flex;
 }
 .grid {
 	display: grid;
+}
+.block {
+	display: block;
+}
+.inline-flex {
+	display: inline-flex;
 }
 .h-full {
 	height: 100%;
@@ -588,6 +603,12 @@ video {
 }
 .h-48 {
 	height: 12rem;
+}
+.h-20 {
+	height: 5rem;
+}
+.h-32 {
+	height: 8rem;
 }
 .max-h-screen {
 	max-height: 100vh;
@@ -604,11 +625,23 @@ video {
 .w-48 {
 	width: 12rem;
 }
+.w-full {
+	width: 100%;
+}
+.w-20 {
+	width: 5rem;
+}
+.w-32 {
+	width: 8rem;
+}
 .grid-cols-2 {
 	grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+.grid-cols-6 {
+	grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -640,6 +673,9 @@ video {
 .gap-6 {
 	gap: 1.5rem;
 }
+.overflow-hidden {
+	overflow: hidden;
+}
 .rounded-sm {
 	border-radius: 0.125rem;
 }
@@ -651,6 +687,16 @@ video {
 }
 .rounded-3xl {
 	border-radius: 1.5rem;
+}
+.border {
+	border-width: 1px;
+}
+.border-gray-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
+.border-transparent {
+	border-color: transparent;
 }
 .bg-yellow-400 {
 	--tw-bg-opacity: 1;
@@ -680,6 +726,18 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
+.bg-gray-50 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
+}
+.bg-indigo-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
+}
+.bg-gray-600 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+}
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
 }
@@ -688,6 +746,12 @@ video {
 }
 .bg-opacity-60 {
 	--tw-bg-opacity: 0.6;
+}
+.bg-opacity-90 {
+	--tw-bg-opacity: 0.9;
+}
+.bg-opacity-80 {
+	--tw-bg-opacity: 0.8;
 }
 .object-cover {
 	-o-object-fit: cover;
@@ -729,6 +793,22 @@ video {
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
 }
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem;
+}
+.py-5 {
+	padding-top: 1.25rem;
+	padding-bottom: 1.25rem;
+}
+.py-2 {
+	padding-top: 0.5rem;
+	padding-bottom: 0.5rem;
+}
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
+}
 .pl-2 {
 	padding-left: 0.5rem;
 }
@@ -756,6 +836,9 @@ video {
 .text-center {
 	text-align: center;
 }
+.text-right {
+	text-align: right;
+}
 .text-4xl {
 	font-size: 2.25rem;
 	line-height: 2.5rem;
@@ -772,6 +855,18 @@ video {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
+.text-sm {
+	font-size: 0.875rem;
+	line-height: 1.25rem;
+}
+.text-5xl {
+	font-size: 3rem;
+	line-height: 1;
+}
+.text-xl {
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
 .font-extrabold {
 	font-weight: 800;
 }
@@ -781,21 +876,130 @@ video {
 .font-semibold {
 	font-weight: 600;
 }
+.font-medium {
+	font-weight: 500;
+}
+.font-light {
+	font-weight: 300;
+}
 .uppercase {
 	text-transform: uppercase;
+}
+.italic {
+	font-style: italic;
 }
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
+.text-gray-700 {
+	--tw-text-opacity: 1;
+	color: rgba(55, 65, 81, var(--tw-text-opacity));
+}
 .shadow-sm {
 	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.shadow {
+	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-lg {
+	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.hover\:bg-indigo-700:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
+}
+.focus\:border-indigo-500:focus {
+	--tw-border-opacity: 1;
+	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
+}
+.focus\:outline-none:focus {
+	outline: 2px solid transparent;
+	outline-offset: 2px;
+}
+.focus\:ring-2:focus {
+	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+.focus\:ring-indigo-500:focus {
+	--tw-ring-opacity: 1;
+	--tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
+}
+.focus\:ring-offset-2:focus {
+	--tw-ring-offset-width: 2px;
+}
+@media (min-width: 640px) {
+
+	.sm\:col-span-3 {
+		grid-column: span 3 / span 3;
+	}
+
+	.sm\:col-span-4 {
+		grid-column: span 4 / span 4;
+	}
+
+	.sm\:col-span-6 {
+		grid-column: span 6 / span 6;
+	}
+
+	.sm\:rounded-md {
+		border-radius: 0.375rem;
+	}
+
+	.sm\:p-6 {
+		padding: 1.5rem;
+	}
+
+	.sm\:px-6 {
+		padding-left: 1.5rem;
+		padding-right: 1.5rem;
+	}
+
+	.sm\:text-sm {
+		font-size: 0.875rem;
+		line-height: 1.25rem;
+	}
+}
 @media (min-width: 768px) {
+
+	.md\:col-span-2 {
+		grid-column: span 2 / span 2;
+	}
+
+	.md\:mt-0 {
+		margin-top: 0px;
+	}
+
+	.md\:h-48 {
+		height: 12rem;
+	}
+
+	.md\:w-48 {
+		width: 12rem;
+	}
 
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+
+	.md\:text-3xl {
+		font-size: 1.875rem;
+		line-height: 2.25rem;
+	}
+}
+@media (min-width: 1024px) {
+
+	.lg\:col-span-2 {
+		grid-column: span 2 / span 2;
 	}
 }
 
