--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -610,6 +610,15 @@ video {
 .h-32 {
 	height: 8rem;
 }
+.h-28 {
+	height: 7rem;
+}
+.h-44 {
+	height: 11rem;
+}
+.h-60 {
+	height: 15rem;
+}
 .max-h-screen {
 	max-height: 100vh;
 }
@@ -672,6 +681,9 @@ video {
 }
 .gap-6 {
 	gap: 1.5rem;
+}
+.gap-3 {
+	gap: 0.75rem;
 }
 .overflow-hidden {
 	overflow: hidden;
@@ -833,11 +845,20 @@ video {
 .pb-10 {
 	padding-bottom: 2.5rem;
 }
+.pb-4 {
+	padding-bottom: 1rem;
+}
+.pb-8 {
+	padding-bottom: 2rem;
+}
 .text-center {
 	text-align: center;
 }
 .text-right {
 	text-align: right;
+}
+.align-middle {
+	vertical-align: middle;
 }
 .text-4xl {
 	font-size: 2.25rem;
@@ -866,6 +887,10 @@ video {
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
+}
+.text-6xl {
+	font-size: 3.75rem;
+	line-height: 1;
 }
 .font-extrabold {
 	font-weight: 800;
@@ -946,12 +971,32 @@ video {
 		grid-column: span 6 / span 6;
 	}
 
+	.sm\:h-36 {
+		height: 9rem;
+	}
+
+	.sm\:w-36 {
+		width: 9rem;
+	}
+
+	.sm\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
 	.sm\:rounded-md {
 		border-radius: 0.375rem;
 	}
 
 	.sm\:p-6 {
 		padding: 1.5rem;
+	}
+
+	.sm\:p-8 {
+		padding: 2rem;
+	}
+
+	.sm\:p-5 {
+		padding: 1.25rem;
 	}
 
 	.sm\:px-6 {
@@ -962,6 +1007,11 @@ video {
 	.sm\:text-sm {
 		font-size: 0.875rem;
 		line-height: 1.25rem;
+	}
+
+	.sm\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
 	}
 }
 @media (min-width: 768px) {
@@ -978,12 +1028,32 @@ video {
 		height: 12rem;
 	}
 
+	.md\:h-40 {
+		height: 10rem;
+	}
+
 	.md\:w-48 {
 		width: 12rem;
 	}
 
+	.md\:w-40 {
+		width: 10rem;
+	}
+
 	.md\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
+	.md\:gap-6 {
+		gap: 1.5rem;
+	}
+
+	.md\:p-8 {
+		padding: 2rem;
+	}
+
+	.md\:p-5 {
+		padding: 1.25rem;
 	}
 
 	.md\:text-4xl {
@@ -994,6 +1064,21 @@ video {
 	.md\:text-3xl {
 		font-size: 1.875rem;
 		line-height: 2.25rem;
+	}
+
+	.md\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+
+	.md\:text-xl {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
+	}
+
+	.md\:text-6xl {
+		font-size: 3.75rem;
+		line-height: 1;
 	}
 }
 @media (min-width: 1024px) {
