--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -557,28 +557,8 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
-.col-span-6 {
-	grid-column: span 6 / span 6;
-}
-.m-10 {
-	margin: 2.5rem;
-}
-.mx-auto {
-	margin-left: auto;
-	margin-right: auto;
-}
-.my-auto {
-	margin-top: auto;
-	margin-bottom: auto;
-}
 .mt-4 {
 	margin-top: 1rem;
-}
-.mt-5 {
-	margin-top: 1.25rem;
-}
-.mt-1 {
-	margin-top: 0.25rem;
 }
 .flex {
 	display: flex;
@@ -586,71 +566,17 @@ video {
 .grid {
 	display: grid;
 }
-.block {
-	display: block;
-}
-.inline-flex {
-	display: inline-flex;
-}
-.h-full {
-	height: 100%;
-}
-.h-72 {
-	height: 18rem;
-}
-.h-40 {
-	height: 10rem;
-}
-.h-48 {
-	height: 12rem;
-}
 .h-20 {
 	height: 5rem;
-}
-.h-32 {
-	height: 8rem;
-}
-.h-28 {
-	height: 7rem;
-}
-.h-44 {
-	height: 11rem;
-}
-.h-60 {
-	height: 15rem;
-}
-.max-h-screen {
-	max-height: 100vh;
-}
-.max-h-96 {
-	max-height: 24rem;
 }
 .min-h-screen {
 	min-height: 100vh;
 }
-.w-72 {
-	width: 18rem;
-}
-.w-48 {
-	width: 12rem;
-}
-.w-full {
-	width: 100%;
-}
 .w-20 {
 	width: 5rem;
 }
-.w-32 {
-	width: 8rem;
-}
-.grid-cols-2 {
-	grid-template-columns: repeat(2, minmax(0, 1fr));
-}
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-cols-6 {
-	grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -658,41 +584,11 @@ video {
 .items-center {
 	align-items: center;
 }
-.items-start {
-	align-items: flex-start;
-}
-.justify-between {
-	justify-content: space-between;
-}
 .justify-center {
 	justify-content: center;
 }
-.justify-items-center {
-	justify-items: center;
-}
-.gap-4 {
-	gap: 1rem;
-}
-.gap-10 {
-	gap: 2.5rem;
-}
-.gap-8 {
-	gap: 2rem;
-}
-.gap-6 {
-	gap: 1.5rem;
-}
 .gap-3 {
 	gap: 0.75rem;
-}
-.overflow-hidden {
-	overflow: hidden;
-}
-.rounded-sm {
-	border-radius: 0.125rem;
-}
-.rounded-md {
-	border-radius: 0.375rem;
 }
 .rounded-lg {
 	border-radius: 0.5rem;
@@ -700,209 +596,74 @@ video {
 .rounded-3xl {
 	border-radius: 1.5rem;
 }
-.border {
-	border-width: 1px;
-}
-.border-gray-300 {
-	--tw-border-opacity: 1;
-	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-.border-transparent {
-	border-color: transparent;
-}
-.bg-yellow-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
-}
-.bg-gray-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
-}
-.bg-yellow-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
-}
-.bg-red-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(220, 38, 38, var(--tw-bg-opacity));
-}
-.bg-white {
-	--tw-bg-opacity: 1;
-	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
-}
 .bg-yellow-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
-}
-.bg-gray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-.bg-gray-50 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
-}
-.bg-indigo-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(79, 70, 229, var(--tw-bg-opacity));
 }
 .bg-gray-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
-.bg-opacity-50 {
-	--tw-bg-opacity: 0.5;
-}
-.bg-opacity-70 {
-	--tw-bg-opacity: 0.7;
+.bg-gray-700 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
 .bg-opacity-60 {
 	--tw-bg-opacity: 0.6;
 }
-.bg-opacity-90 {
-	--tw-bg-opacity: 0.9;
-}
 .bg-opacity-80 {
 	--tw-bg-opacity: 0.8;
+}
+.bg-opacity-50 {
+	--tw-bg-opacity: 0.5;
 }
 .object-cover {
 	-o-object-fit: cover;
 	   object-fit: cover;
 }
-.p-7 {
-	padding: 1.75rem;
-}
 .p-4 {
 	padding: 1rem;
-}
-.p-6 {
-	padding: 1.5rem;
-}
-.p-10 {
-	padding: 2.5rem;
-}
-.p-5 {
-	padding: 1.25rem;
 }
 .p-3 {
 	padding: 0.75rem;
 }
-.p-1 {
-	padding: 0.25rem;
-}
-.p-8 {
-	padding: 2rem;
-}
-.px-10 {
-	padding-left: 2.5rem;
-	padding-right: 2.5rem;
-}
-.py-3 {
-	padding-top: 0.75rem;
-	padding-bottom: 0.75rem;
-}
-.py-6 {
-	padding-top: 1.5rem;
-	padding-bottom: 1.5rem;
-}
-.px-4 {
-	padding-left: 1rem;
-	padding-right: 1rem;
-}
-.py-5 {
-	padding-top: 1.25rem;
-	padding-bottom: 1.25rem;
-}
-.py-2 {
-	padding-top: 0.5rem;
-	padding-bottom: 0.5rem;
-}
-.px-3 {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
-}
-.pl-2 {
-	padding-left: 0.5rem;
-}
-.pl-6 {
-	padding-left: 1.5rem;
-}
-.pr-4 {
-	padding-right: 1rem;
-}
-.pt-7 {
-	padding-top: 1.75rem;
-}
-.pb-7 {
-	padding-bottom: 1.75rem;
-}
-.pr-5 {
-	padding-right: 1.25rem;
-}
-.pl-4 {
-	padding-left: 1rem;
+.p-5 {
+	padding: 1.25rem;
 }
 .pb-10 {
 	padding-bottom: 2.5rem;
 }
-.pb-4 {
-	padding-bottom: 1rem;
-}
-.pb-8 {
-	padding-bottom: 2rem;
+.pl-4 {
+	padding-left: 1rem;
 }
 .text-center {
 	text-align: center;
-}
-.text-right {
-	text-align: right;
-}
-.align-middle {
-	vertical-align: middle;
-}
-.text-4xl {
-	font-size: 2.25rem;
-	line-height: 2.5rem;
-}
-.text-lg {
-	font-size: 1.125rem;
-	line-height: 1.75rem;
-}
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
 }
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
 }
-.text-sm {
-	font-size: 0.875rem;
-	line-height: 1.25rem;
+.text-lg {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
 }
-.text-5xl {
-	font-size: 3rem;
-	line-height: 1;
+.text-xs {
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem;
 }
 .text-xl {
 	font-size: 1.25rem;
 	line-height: 1.75rem;
-}
-.text-6xl {
-	font-size: 3.75rem;
-	line-height: 1;
-}
-.font-extrabold {
-	font-weight: 800;
 }
 .font-bold {
 	font-weight: 700;
 }
 .font-semibold {
 	font-weight: 600;
-}
-.font-medium {
-	font-weight: 500;
 }
 .font-light {
 	font-weight: 300;
@@ -917,91 +678,32 @@ video {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
-.text-gray-700 {
-	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
-}
-.shadow-sm {
-	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow {
-	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-lg {
-	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.hover\:bg-indigo-700:hover {
-	--tw-bg-opacity: 1;
-	background-color: rgba(67, 56, 202, var(--tw-bg-opacity));
-}
-.focus\:border-indigo-500:focus {
-	--tw-border-opacity: 1;
-	border-color: rgba(99, 102, 241, var(--tw-border-opacity));
-}
-.focus\:outline-none:focus {
-	outline: 2px solid transparent;
-	outline-offset: 2px;
-}
-.focus\:ring-2:focus {
-	--tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-	--tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-	box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-.focus\:ring-indigo-500:focus {
-	--tw-ring-opacity: 1;
-	--tw-ring-color: rgba(99, 102, 241, var(--tw-ring-opacity));
-}
-.focus\:ring-offset-2:focus {
-	--tw-ring-offset-width: 2px;
-}
 @media (min-width: 640px) {
 
-	.sm\:col-span-3 {
-		grid-column: span 3 / span 3;
+	.sm\:h-32 {
+		height: 8rem;
 	}
 
-	.sm\:col-span-4 {
-		grid-column: span 4 / span 4;
-	}
-
-	.sm\:col-span-6 {
-		grid-column: span 6 / span 6;
-	}
-
-	.sm\:h-36 {
-		height: 9rem;
-	}
-
-	.sm\:w-36 {
-		width: 9rem;
+	.sm\:w-32 {
+		width: 8rem;
 	}
 
 	.sm\:grid-cols-2 {
 		grid-template-columns: repeat(2, minmax(0, 1fr));
 	}
 
-	.sm\:rounded-md {
-		border-radius: 0.375rem;
-	}
-
-	.sm\:p-6 {
-		padding: 1.5rem;
-	}
-
-	.sm\:p-8 {
-		padding: 2rem;
-	}
-
 	.sm\:p-5 {
 		padding: 1.25rem;
 	}
 
-	.sm\:px-6 {
-		padding-left: 1.5rem;
-		padding-right: 1.5rem;
+	.sm\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+
+	.sm\:text-xl {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
 	}
 
 	.sm\:text-sm {
@@ -1016,49 +718,16 @@ video {
 }
 @media (min-width: 768px) {
 
-	.md\:col-span-2 {
-		grid-column: span 2 / span 2;
-	}
-
-	.md\:mt-0 {
-		margin-top: 0px;
-	}
-
-	.md\:h-48 {
-		height: 12rem;
-	}
-
 	.md\:h-40 {
 		height: 10rem;
-	}
-
-	.md\:w-48 {
-		width: 12rem;
 	}
 
 	.md\:w-40 {
 		width: 10rem;
 	}
 
-	.md\:grid-cols-2 {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
-	}
-
-	.md\:gap-6 {
-		gap: 1.5rem;
-	}
-
 	.md\:p-8 {
 		padding: 2rem;
-	}
-
-	.md\:p-5 {
-		padding: 1.25rem;
-	}
-
-	.md\:text-4xl {
-		font-size: 2.25rem;
-		line-height: 2.5rem;
 	}
 
 	.md\:text-3xl {
@@ -1066,25 +735,34 @@ video {
 		line-height: 2.25rem;
 	}
 
-	.md\:text-2xl {
-		font-size: 1.5rem;
-		line-height: 2rem;
-	}
-
 	.md\:text-xl {
 		font-size: 1.25rem;
 		line-height: 1.75rem;
 	}
 
-	.md\:text-6xl {
-		font-size: 3.75rem;
-		line-height: 1;
+	.md\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
 	}
 }
 @media (min-width: 1024px) {
 
-	.lg\:col-span-2 {
-		grid-column: span 2 / span 2;
+	.lg\:h-60 {
+		height: 15rem;
+	}
+
+	.lg\:w-60 {
+		width: 15rem;
+	}
+
+	.lg\:text-5xl {
+		font-size: 3rem;
+		line-height: 1;
+	}
+
+	.lg\:text-2xl {
+		font-size: 1.5rem;
+		line-height: 2rem;
 	}
 }
 
