--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -557,212 +557,315 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
-.mt-4 {
-	margin-top: 1rem;
-}
-.flex {
-	display: flex;
-}
-.grid {
-	display: grid;
-}
-.h-20 {
-	height: 5rem;
-}
-.min-h-screen {
-	min-height: 100vh;
-}
-.w-20 {
-	width: 5rem;
-}
-.grid-cols-1 {
-	grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.flex-col {
-	flex-direction: column;
-}
-.items-center {
-	align-items: center;
-}
-.justify-center {
-	justify-content: center;
-}
-.gap-3 {
-	gap: 0.75rem;
-}
-.rounded-lg {
-	border-radius: 0.5rem;
-}
-.rounded-3xl {
-	border-radius: 1.5rem;
-}
-.bg-yellow-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
-}
-.bg-gray-600 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
-}
-.bg-gray-700 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
-}
-.bg-opacity-60 {
-	--tw-bg-opacity: 0.6;
-}
-.bg-opacity-80 {
-	--tw-bg-opacity: 0.8;
-}
-.bg-opacity-50 {
-	--tw-bg-opacity: 0.5;
-}
-.object-cover {
-	-o-object-fit: cover;
-	   object-fit: cover;
-}
-.p-4 {
-	padding: 1rem;
-}
-.p-3 {
-	padding: 0.75rem;
-}
-.p-5 {
-	padding: 1.25rem;
-}
-.pb-10 {
-	padding-bottom: 2.5rem;
-}
-.pl-4 {
-	padding-left: 1rem;
-}
-.text-center {
-	text-align: center;
-}
-.text-2xl {
-	font-size: 1.5rem;
-	line-height: 2rem;
-}
-.text-lg {
-	font-size: 1.125rem;
-	line-height: 1.75rem;
-}
-.text-xs {
-	font-size: 0.75rem;
-	line-height: 1rem;
-}
-.text-3xl {
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
-.text-xl {
-	font-size: 1.25rem;
-	line-height: 1.75rem;
-}
-.font-bold {
-	font-weight: 700;
-}
-.font-semibold {
-	font-weight: 600;
-}
-.font-light {
-	font-weight: 300;
-}
-.uppercase {
-	text-transform: uppercase;
-}
-.italic {
-	font-style: italic;
-}
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
+.homeContainer {
+	display: flex;
+	min-height: 100vh;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
+}
+
+.homeContent {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	border-radius: 0.5rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.6;
+	padding: 0.75rem;
+	text-align: center;
+}
+
+.homeBox {
+	border-radius: 0.5rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.8;
+	padding: 0.75rem;
+}
+
 @media (min-width: 640px) {
 
-	.sm\:h-32 {
-		height: 8rem;
-	}
-
-	.sm\:w-32 {
-		width: 8rem;
-	}
-
-	.sm\:grid-cols-2 {
-		grid-template-columns: repeat(2, minmax(0, 1fr));
-	}
-
-	.sm\:p-5 {
+	.homeBox {
 		padding: 1.25rem;
 	}
-
-	.sm\:text-2xl {
-		font-size: 1.5rem;
-		line-height: 2rem;
-	}
-
-	.sm\:text-xl {
-		font-size: 1.25rem;
-		line-height: 1.75rem;
-	}
-
-	.sm\:text-sm {
-		font-size: 0.875rem;
-		line-height: 1.25rem;
-	}
-
-	.sm\:text-4xl {
-		font-size: 2.25rem;
-		line-height: 2.5rem;
-	}
 }
+
+.homeTitle {
+	padding-bottom: 2.5rem;
+	font-size: 1.5rem;
+	line-height: 2rem;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
 @media (min-width: 768px) {
 
-	.md\:h-40 {
-		height: 10rem;
-	}
-
-	.md\:w-40 {
-		width: 10rem;
-	}
-
-	.md\:p-8 {
-		padding: 2rem;
-	}
-
-	.md\:text-3xl {
+	.homeTitle {
 		font-size: 1.875rem;
 		line-height: 2.25rem;
 	}
-
-	.md\:text-xl {
-		font-size: 1.25rem;
-		line-height: 1.75rem;
-	}
-
-	.md\:text-4xl {
-		font-size: 2.25rem;
-		line-height: 2.5rem;
-	}
 }
+
 @media (min-width: 1024px) {
 
-	.lg\:h-60 {
-		height: 15rem;
-	}
-
-	.lg\:w-60 {
-		width: 15rem;
-	}
-
-	.lg\:text-5xl {
+	.homeTitle {
 		font-size: 3rem;
 		line-height: 1;
 	}
+}
 
-	.lg\:text-2xl {
+@media (min-width: 640px) {
+
+	.homePg {
+		font-size: 1.125rem;
+		line-height: 1.75rem;
+	}
+}
+
+@media (min-width: 768px) {
+
+	.homePg {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
+	}
+}
+
+@media (min-width: 1024px) {
+
+	.homePg {
 		font-size: 1.5rem;
 		line-height: 2rem;
 	}
 }
 
+.menuContainer {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.menuTitle {
+	padding-bottom: 2.5rem;
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+	font-weight: 600;
+	text-transform: uppercase;
+}
+
+@media (min-width: 640px) {
+
+	.menuTitle {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+}
+
+@media (min-width: 768px) {
+
+	.menuTitle {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+}
+
+.menu-v {
+	padding: 1.25rem;
+}
+
+.menuGrid {
+	display: grid;
+	grid-template-columns: repeat(1, minmax(0, 1fr));
+	gap: 0.75rem;
+	border-radius: 0.5rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.5;
+	padding: 1rem;
+}
+
+@media (min-width: 640px) {
+
+	.menuGrid {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+}
+
+@media (min-width: 768px) {
+
+	.menuGrid {
+		padding: 2rem;
+	}
+}
+
+.gridItem {
+	display: flex;
+	align-items: center;
+	border-radius: 0.5rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.6;
+	padding: 0.75rem;
+}
+
+.gridImage {
+	height: 5rem;
+	width: 5rem;
+	border-radius: 1.5rem;
+	-o-object-fit: cover;
+	   object-fit: cover;
+}
+
+@media (min-width: 640px) {
+
+	.gridImage {
+		height: 8rem;
+	}
+
+	.gridImage {
+		width: 8rem;
+	}
+}
+
+@media (min-width: 768px) {
+
+	.gridImage {
+		height: 10rem;
+	}
+
+	.gridImage {
+		width: 10rem;
+	}
+}
+
+@media (min-width: 1024px) {
+
+	.gridImage {
+		height: 15rem;
+	}
+
+	.gridImage {
+		width: 15rem;
+	}
+}
+
+.grid-iv {
+	padding-left: 1rem;
+}
+
+.gridTitle {
+	font-size: 1.125rem;
+	line-height: 1.75rem;
+	font-weight: 700;
+}
+
+@media (min-width: 640px) {
+
+	.gridTitle {
+		font-size: 1.25rem;
+		line-height: 1.75rem;
+	}
+}
+
+@media (min-width: 768px) {
+
+	.gridTitle {
+		font-size: 1.875rem;
+		line-height: 2.25rem;
+	}
+}
+
+.gridPg {
+	margin-top: 1rem;
+	font-size: 0.75rem;
+	line-height: 1rem;
+}
+
+@media (min-width: 640px) {
+
+	.gridPg {
+		font-size: 0.875rem;
+		line-height: 1.25rem;
+	}
+}
+
+@media (min-width: 768px) {
+
+	.gridPg {
+		font-size: 1rem;
+		line-height: 1.5rem;
+	}
+}
+
+@media (min-width: 1024px) {
+
+	.gridPg {
+		font-size: 1.5rem;
+		line-height: 2rem;
+	}
+}
+
+.contactContainer {
+	display: flex;
+	min-height: 100vh;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.contactContent {
+	border-radius: 0.5rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(217, 119, 6, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.5;
+	padding: 1rem;
+	font-size: 1.875rem;
+	line-height: 2.25rem;
+}
+
+@media (min-width: 640px) {
+
+	.contactContent {
+		padding: 1.25rem;
+	}
+}
+
+.contactBox {
+	border-radius: 0.5rem;
+	--tw-bg-opacity: 1;
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
+	--tw-bg-opacity: 0.8;
+	padding: 0.75rem;
+	font-size: 1.25rem;
+	line-height: 1.75rem;
+}
+
+@media (min-width: 640px) {
+
+	.contactBox {
+		padding: 1.25rem;
+	}
+
+	.contactBox {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+}
+
+.contactTitle {
+	padding-bottom: 2.5rem;
+	text-align: center;
+	font-weight: 600;
+}
+
+.contactSpan {
+	font-weight: 300;
+	font-style: italic;
+}
