--- a/assets/css/tailwind/tailwind.css
+++ b/assets/css/tailwind/tailwind.css
@@ -1,6 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.nav-container {
+  @apply flex w-full justify-between pt-8 md:pt-16 text-xl sm:text-2xl md:text-3xl font-bold px-6;
+}
+
+.nav-style {
+  @apply flex justify-center w-1/3 pb-6 cursor-pointer hover:text-yellow-300;
+}
+
+.indicator {
+  @apply border-b-4 border-yellow-600;
+}
+
 .homeContainer {
   @apply min-h-screen flex justify-center items-center p-4;
 }
