--- a/assets/css/tailwind/tailwind.css
+++ b/assets/css/tailwind/tailwind.css
@@ -7,7 +7,7 @@
 }
 
 .nav-style {
-  @apply flex justify-center w-1/3 pb-6 cursor-pointer hover:text-yellow-300;
+  @apply flex justify-center w-1/3 pb-6 cursor-pointer hover:text-yellow-300 text-white;
 }
 
 .indicator {
