--- a/assets/css/tailwind/tailwind.css
+++ b/assets/css/tailwind/tailwind.css
@@ -7,7 +7,7 @@
 }
 
 .nav-style {
-  @apply flex justify-center w-1/3 pb-6 cursor-pointer hover:text-yellow-300 text-white;
+  @apply flex justify-center w-1/3 pb-4 cursor-pointer hover:text-yellow-300 text-white;
 }
 
 .indicator {
@@ -15,7 +15,7 @@
 }
 
 .homeContainer {
-  @apply min-h-screen flex justify-center items-center p-4;
+  @apply min-h-screen flex justify-center items-center;
 }
 
 .homeContent {
