--- a/assets/css/build.css
+++ b/assets/css/build.css
@@ -557,9 +557,6 @@ video {
 	--tw-ring-offset-shadow: 0 0 #0000;
 	--tw-ring-shadow: 0 0 #0000;
 }
-.border {
-	border-width: 1px;
-}
 .text-white {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
@@ -603,6 +600,8 @@ video {
 	cursor: pointer;
 	justify-content: center;
 	padding-bottom: 1.5rem;
+	--tw-text-opacity: 1;
+	color: rgba(255, 255, 255, var(--tw-text-opacity));
 }
 
 .nav-style:hover {
@@ -621,7 +620,6 @@ video {
 	min-height: 100vh;
 	align-items: center;
 	justify-content: center;
-	padding: 1rem;
 }
 
 .homeContent {
